adguardhome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-deployment
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
      - name: adguard-home
        image: adguard/adguardhome:edge
        ports:
        - containerPort: 53
          name: dns
          protocol: UDP
        - containerPort: 3000
          name: http-initial
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 853
          name: tlsdns
          protocol: TCP
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome
      volumes:
      - name: adguard-data
        persistentVolumeClaim:
          claimName: adguard-pvc
