adguardhome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-nginx
  namespace: argocd
  annotations:
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: wnsrt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.wnsrt.de"
      secretName: wnsrt

  rules:
    - host: adguardhome.wnsrt.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-service
                port:
                  number: 3000
